--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.12.0",
-    "satori": "^0.18.3"
+    "satori": "^0.18.3",
     "yoga-wasm-web": "^0.3.3"  <-- これを追加します
   },
   "devDependencies": {
