--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.12.0",
     "satori": "^0.18.3",
-    "yoga-wasm-web": "^0.3.3"  <-- これを追加します
+    "yoga-wasm-web": "^0.3.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
